--- a/src/pages/Project1.css
+++ b/src/pages/Project1.css
@@ -7,6 +7,7 @@
   width: 100%;
   min-height: 100vh;
   position: relative;
+  font-family: 'JetBrains Mono', monospace;
   margin-top: 120px; /* aligns with navbar offset */
 }
 
